Update main page

--- a/app/views/kfaninc/home.html.erb
+++ b/app/views/kfaninc/home.html.erb
@@ -10,6 +10,12 @@
 	<title>Home | KFanInc</title>
 </head>
 <body>
+<ul class="navbar">
+<a href="#"><%= image_tag "logo1.svg", height: "45", :id => "logo"%></a>
+<li><a href="#">About</a></li>
+<li><a href="#">Utilities</a></li>
+<li><a href="#">Map</a></li>
+</ul>
 <section class="cd-horizontal-timeline">
 	<div class="timeline">
 		<div class="events-wrapper">
