Finished front page

--- a/app/views/kfaninc/home.html.erb
+++ b/app/views/kfaninc/home.html.erb
@@ -10,12 +10,22 @@
 	<title>Home | KFanInc</title>
 </head>
 <body>
+<div id="overlay"></div>
 <ul class="navbar">
-<a href="#"><%= image_tag "logo1.svg", height: "45", :id => "logo"%></a>
+<a href="http://kfaninc.com"><%= image_tag "logo1.svg", height: "45", :id => "logo"%></a>
 <li><a href="#">About</a></li>
 <li><a href="#">Utilities</a></li>
 <li><a href="#">Map</a></li>
+<li><a href="#" id="contact">Contact</a></li>
 </ul>
+
+<nav class="social">
+      <a href="https://github.com/kevinfan23" id="rainbow" target="_blank"><span class="entypo-github"></span></a>
+      <a href="mailto:kevinfan23@ucla.edu"><span class="entypo-mail"></span></a>
+      <a href="https://www.facebook.com/kevin.fan.984" target="_blank"><span class="entypo-facebook"></span></a>
+      <a href="https://www.instagram.com/kfan23/" target="_blank"><span class="entypo-instagrem"></span></a>
+</nav>
+    
 <section class="cd-horizontal-timeline">
 	<div class="timeline">
 		<div class="events-wrapper">
