--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,27 @@
+/* If window is smaller than 821px, display the HKN logo only */
+@media screen and (max-width: 750px) {
+    .navbar li a {
+        display: none;
+    }
+    
+    #logo {
+	    position: absolute;
+	    width: 200px !important;
+	    left: 35% !important;
+	    padding: 0;
+		width:auto;
+	    vertical-align: middle;
+    }
+}
+
+/* Include social media icons */
+@import url(http://weloveiconfonts.com/api/?family=entypo);
+/* entypo */
+[class*="entypo-"]:before {
+  font-family: 'entypo', sans-serif;
+}
+
+
 /* Primary style */
 *, *::after, *::before {
   box-sizing: border-box;
@@ -16,7 +40,18 @@ em {
 	font-family: "Garamond";
 	font-size: 1rem;
 }
-
+/* Overlay style for contect effects */
+#overlay { 
+   background: linear-gradient(to left, #485563 , #29323c);
+   opacity: 0.2;
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   top: 0;
+   left: 0;
+   z-index: 5;
+   display: none;
+}
 /* Nav bar */
 #logo {
 	position: absolute;
@@ -44,7 +79,7 @@ em {
     position: relative;
 }
 
-.navbar a:hover:after {
+.navbar li a:hover:after {
     content: '';
     border-bottom: 6px solid white;
     border-left: 6px solid transparent;
@@ -56,7 +91,7 @@ em {
     margin-left: -6px;  
 }
 
-.navbar a:hover:before{
+.navbar li a:hover:before{
     content: '';
     border-bottom: 7px solid #444;    
     border-left: 7px solid transparent;
@@ -69,7 +104,6 @@ em {
 
 }
 
-
 .navbar a {
     display: block;
     color: #000000;
@@ -79,6 +113,80 @@ em {
 
 .navbar a:hover, .navbar .active a {
     color: #E18728;
+}
+
+/* Social media & contact effects */
+.social {
+	display: none;
+	z-index: 10;
+	position: absolute;
+}
+
+#contact {
+	z-index: 10;
+}
+
+#rainbow:hover {
+	background: #000000 !important;
+}
+
+nav.social {
+  position: absolute;
+  bottom: 20px;
+  width: 400px;
+  text-align: center;
+  z-index: 10;
+  top: 35%;
+  left: 33%;
+}
+
+nav.social a {
+  position: absolute;
+  width: 25%;
+  height: 10px;
+  width: 100px;
+  color: #fff;
+  font-size: 30px;
+  line-height: 90px;
+  text-decoration: none;
+  transition: all 200ms ease-in-out 40ms;
+  transform-origin: bottom;
+}
+
+nav.social span {
+  opacity: 0;
+  height: 0;
+  transition: all 200ms ease-in-out 30ms;
+}
+
+nav.social a:hover > span {
+  transition-delay: 200ms;
+  opacity: 1;
+  height: initial;
+}
+
+nav.social a:hover {
+  height: 90px;
+}
+
+nav.social a:nth-child(1) {
+  background-color: #000000;
+  left: 0;
+}
+
+nav.social a:nth-child(2) {
+  background-color: #dd4b39;
+  left: 25%;
+}
+
+nav.social a:nth-child(3) {
+  background-color: #45619D;
+  left: 50%;
+}
+
+nav.social a:nth-child(4) {
+  background-color: #004879;
+  left: 75%;
 }
 
 /* Timeline */
@@ -99,7 +207,7 @@ em {
 }
 .cd-horizontal-timeline.loaded {
   /* show the timeline after events position has been set (using JavaScript) */
-  margin-top: 300px;
+  margin-top: 270px;
   opacity: 1;
 }
 .cd-horizontal-timeline .timeline {
