--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -43,7 +43,7 @@ em {
 /* Overlay style for contect effects */
 #overlay { 
    background: linear-gradient(to left, #485563 , #29323c);
-   opacity: 0.2;
+   opacity: 0.5;
    width: 100%;
    height: 100%;
    position: absolute;
@@ -487,6 +487,92 @@ nav.social a:nth-child(4) {
 #kris {
 	font-size: 0.8rem;
 	color: #000000;
+}
+
+/* About page toggle search */
+.main {
+  font-family: "Lato";
+  font-weight: 300;
+  font-size: 1.1rem;
+  width: 100%;
+  max-width: 640px;
+  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+label {
+  display: block;
+  margin-bottom: 1em;
+  letter-spacing: 1px;
+}
+
+.chunk {
+  display: block;
+  width: 100%;
+  margin-bottom: 2.5em;
+  
+  &:after {
+      content: "";
+      display: table;
+      clear: both;
+  }
+}
+
+// ===== Toggle Buttons =====
+
+// Button wrapper
+.t-toggle-button {
+
+  .t-toggle-button__option:first-child {
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+  }
+
+  .t-toggle-button__option:last-child {
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+  }
+}
+
+// Individual option in toggle button
+.t-toggle-button__option {
+  display: inline-block;
+  float: left;
+  height: auto;
+  width: 13em;
+  padding: 0.875em;
+  font: inherit;
+  font-weight: 700;
+  color: #a59eb5;
+  text-decoration: none;
+  text-align: center;
+  margin: 0;
+  cursor: pointer;
+  overflow: visible;
+  border: 2px solid #716894;
+  vertical-align: middle;
+  -webkit-appearance: none;
+
+  span {
+    font-size: 14px;
+  }
+
+  // When checked the button is filled dark purple
+  &.js-checked {
+    background-color: #716894;
+    color: #ffffff;
+  }
+
+  // Hide the radio button
+  input {
+    position: absolute;
+    opacity: 0;
+    z-index: -1; /* Put the input behind the label so it doesn't overlay text */
+  }
+
 }
 
 @-webkit-keyframes cd-enter-right {
