--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <ul class="navbar">
-<a href="http://kfaninc.com"><%= image_tag "logo1.svg", height: "45", :id => "logo"%></a>
+<%= link_to image_tag("logo1.svg", height: "45"), root_path, :id => "logo"%>
 <li><%= link_to "About", about_path %></li>
 <li><a href="#">Utilities</a></li>
 <li><a href="#">Map</a></li>
