--- a/app/views/kfaninc/about.html.erb
+++ b/app/views/kfaninc/about.html.erb
@@ -3,28 +3,29 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
 	<%= stylesheet_link_tag "custom", media: "all", "data-turbolinks-track" => true %>  
 	<title>About | KFanInc</title>
 </head>
 <body>
+<div id="overlay"></div>
 <%= render 'layouts/header' %>
+<%= render 'layouts/contact' %>
 
 <div class="list-switcher main">
-  <div class="list-switcher__lists chunk" id="panel-type">
-    <label>I'd like to hear about...</label>
-    <div class="t-toggle-button">
-      <label class="t-toggle-button__option js-checked">
+  <div class="list-switcher_lists chunk" id="panel-type">
+    <label>I'd like to hear from...</label>
+    <div class="toggle-button">
+      <label class="toggle-button_option js-checked">
         <input name="audience" value="designList" type="radio" checked="checked" id="panel-type_designer">
         <span>Designers</span>
       </label>
-      <label class="t-toggle-button__option">
+      <label class="toggle-button_option">
         <input name="audience" value="devList" type="radio" id="panel-type_developer">
         <span>Developers</span>
       </label>
     </div>
   </div>
-  <div class="list-switcher__select chunk">
+  <div class="list-switcher_select chunk">
     <label>Specialized in...</label>
     <select name="select" id="panel-category" placeholder="Go on, we like a challenge...">
       <option value="value1">Value 1</option>
@@ -35,5 +36,7 @@
 </div>
 <%= javascript_include_tag "jquery-2.1.4.js", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "about", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "home", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.1/js/standalone/selectize.js", "data-turbolinks-track" => true %>
 </body>
 </html>
