--- a/app/views/kfaninc/home.html.erb
+++ b/app/views/kfaninc/home.html.erb
@@ -12,14 +12,7 @@
 <body>
 <div id="overlay"></div>
 <%= render 'layouts/header' %>
-<%= render 'layouts/clock' %>
-
-<nav class="social">
-      <a href="https://github.com/kevinfan23" id="rainbow" target="_blank"><span class="entypo-github"></span></a>
-      <a href="mailto:kevinfan23@ucla.edu"><span class="entypo-mail"></span></a>
-      <a href="https://www.facebook.com/kevin.fan.984" target="_blank"><span class="entypo-facebook"></span></a>
-      <a href="https://www.instagram.com/kfan23/" target="_blank"><span class="entypo-instagrem"></span></a>
-</nav>
+<%= render 'layouts/contact' %>
     
 <section class="cd-horizontal-timeline">
 	<div class="timeline">
