--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -42,7 +42,7 @@ em {
 /* Overlay style for contect effects */
 #overlay { 
    background: linear-gradient(to left, #485563 , #29323c);
-   opacity: 0.5;
+   opacity: 0.6;
    width: 100%;
    height: 100%;
    position: absolute;
@@ -543,7 +543,7 @@ nav.social a:nth-child(4) {
   font-weight: 400;
   font-size: 0.95rem;
   width: 100%;
-  max-width: 460px;
+  max-width: 550px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -626,6 +626,11 @@ label {
 
 .toggle-button_option:hover{
 		box-shadow: 0px 2px 1px white inset, 0px -2px 20px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
+}
+
+// Selection 
+.selectize-control.single .selectize-input, .selectize-control.single .selectize-input input {
+	cursor: pointer;
 }
 
 @-webkit-keyframes cd-enter-right {
