Fixed deployment views

--- a/app/views/kfaninc/about.html.erb
+++ b/app/views/kfaninc/about.html.erb
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<%= stylesheet_link_tag "custom", media: "all", "data-turbolinks-track" => true %>  
-	<%= stylesheet_link_tag "selectize.default", media: "all", "data-turbolinks-track" => true %>  
+	<%= stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.1/css/selectize.css" %>  
 	<title>About | KFanInc</title>
 </head>
 <body>
