--- a/app/views/kfaninc/about.html.erb
+++ b/app/views/kfaninc/about.html.erb
@@ -37,9 +37,9 @@
 				</div>
 </div>
 </div>
-<%= javascript_include_tag "jquery-2.1.4.js", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "selectize", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "about", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "home", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "clock", "data-turbolinks-track" => true %>
 </body>
 </html>
