--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,6 +21,11 @@
   font-family: 'entypo', sans-serif;
 }
 
+/* Fonts */
+@font-face {
+    font-family: "CG Omega";
+    src: url("app/assets/fonts/cg-omega.woff");
+}
 /* Primary style */
 *, *::after, *::before {
   box-sizing: border-box;
@@ -187,7 +192,7 @@ nav.social a:nth-child(4) {
 	position: absolute;
     height: 300px;
     width: 550px;
-	padding:0;
+	padding: 0;
     top: 65%;
     left: 50%;
     margin-right: -50%;
