--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,6 +2,6 @@
 <%= link_to image_tag("logo1.svg", height: "45"), root_path, :id => "logo"%>
 <li><%= link_to "About", about_path %></li>
 <li><a href="#">Utilities</a></li>
-<li><a href="#">Map</a></li>
+<li><%= link_to "Map", map_path %></li>
 <li><a href="#" id="contact">Contact</a></li>
 </ul>
