Fixed javascript reload problem

--- a/app/views/kfaninc/home.html.erb
+++ b/app/views/kfaninc/home.html.erb
@@ -77,7 +77,7 @@
 			</li>
 
 			<li data-date="09/01/2010">
-				<h2>American is my next stop</h2>
+				<h2>America is my next stop</h2>
 				<em>Circa 2010</em>
 				<p>	
 					With the support of my family, I've decided around this time that I would be pursuing my bachelor's degree in America. The adventurous DNA of me would keep lasting until now. I like the unpredictable aspect of the future and the excitement of throwing myself into the totally dark unknowns
