--- a/app/views/kfaninc/about.html.erb
+++ b/app/views/kfaninc/about.html.erb
@@ -8,9 +8,11 @@
 	<title>About | KFanInc</title>
 </head>
 <body>
-<div id="overlay"></div>
+<div id="overlay-contact"></div>
+<div id="overlay-utilities"></div>
 <%= render 'layouts/header' %>
 <%= render 'layouts/contact' %>
+<%= render 'layouts/utilities' %>
 
 <div class="list-switcher main">
   <div class="list-switcher_lists chunk" id="panel-type">
