--- a/app/views/kfaninc/map.html.erb
+++ b/app/views/kfaninc/map.html.erb
@@ -5,19 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<%= stylesheet_link_tag "custom", media: "all", "data-turbolinks-track" => true %>  
 	<title>About | KFanInc</title>
-</head>
-<body>
-<div id="overlay"></div>
-<%= render 'layouts/header' %>
-<%= render 'layouts/contact' %>
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Simple Map</title>
-    <meta name="viewport" content="initial-scale=1.0">
-    <meta charset="utf-8">
-    <style>
-	    
+	<style>
       html, body {
         height: 100%;
         margin: 0;
@@ -41,8 +29,13 @@
 		  padding: 0;
       }
     </style>
-  </head>
-  <body>
+</head>
+<body>
+<div id="overlay-contact"></div>
+<div id="overlay-utilities"></div>
+<%= render 'layouts/header' %>
+<%= render 'layouts/contact' %>
+<%= render 'layouts/utilities' %>
 	<h2>Listen...</h2>
     <div id="map"></div>
     <script>
@@ -292,13 +285,11 @@
         
       }
 
-    </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCdKge6UcNySGaO8Y5kchHe_gY-dlgXekE&callback=initMap"
-    async defer></script>
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCdKge6UcNySGaO8Y5kchHe_gY-dlgXekE&callback=initMap" async defer></script>
 <%= javascript_include_tag "selectize", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "about", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "home", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "clock", "data-turbolinks-track" => true %>
-
 </body>
 </html>
