--- a/app/views/kfaninc/about.html.erb
+++ b/app/views/kfaninc/about.html.erb
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<%= stylesheet_link_tag "custom", media: "all", "data-turbolinks-track" => true %>  
-	<%= stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.1/css/selectize.css" %>  
+	<%= stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.1/css/selectize.css" %> 
+	<%= javascript_include_tag "modernizr.js", "data-turbolinks-track" => true %> 
 	<title>About | KFanInc</title>
 </head>
 <body>
@@ -41,7 +42,7 @@
 </div>
 <%= javascript_include_tag "selectize", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "about", "data-turbolinks-track" => true %>
-<%= javascript_include_tag "home", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "clock", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "home", "data-turbolinks-track" => true %>
 </body>
 </html>
