--- a/app/views/kfaninc/home.html.erb
+++ b/app/views/kfaninc/home.html.erb
@@ -152,10 +152,9 @@ Thanks for writing.  It was good to hear from you!
 				</p>
 			</li>
 		</ol>
-	</div> <!-- .events-content -->
+	</div>
 </section>
-<%= javascript_include_tag "jquery.mobile.custom.min.js", "data-turbolinks-track" => true %>
-<%= javascript_include_tag "home", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "clock", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "home", "data-turbolinks-track" => true %>
 </body>
 </html>
