--- a/app/views/kfaninc/map.html.erb
+++ b/app/views/kfaninc/map.html.erb
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<%= stylesheet_link_tag "custom", media: "all", "data-turbolinks-track" => true %>  
+	<%= javascript_include_tag "modernizr.js", "data-turbolinks-track" => true %>
 	<title>About | KFanInc</title>
 	<style>
       html, body {
@@ -287,9 +288,7 @@
 
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCdKge6UcNySGaO8Y5kchHe_gY-dlgXekE&callback=initMap" async defer></script>
-<%= javascript_include_tag "selectize", "data-turbolinks-track" => true %>
-<%= javascript_include_tag "about", "data-turbolinks-track" => true %>
-<%= javascript_include_tag "home", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "clock", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "home", "data-turbolinks-track" => true %>
 </body>
 </html>
