--- a/app/views/layouts/_utilities.html.erb
+++ b/app/views/layouts/_utilities.html.erb
@@ -1,7 +1,66 @@
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<div class="notes-wrapper">
+	<div class="saver-wrap" contenteditable="false">
+		<div class="notes-dot" contenteditable="false"></div>
+		<div class="rest" contenteditable="false"></div>
+	</div>
+	<div class="notes-title" contenteditable="true" onpaste="OnPaste_StripFormatting(this, event);">
+		note title
+	</div>
+	<div class="notes-content" contenteditable="true" onpaste="OnPaste_StripFormatting(this, event);">
+	Start typing...
+	</div>
+	<div class="notes-line"></div>
+	<div class="notes-comment"></div>
+	<input type="file" onchange="previewFile()" id="selectedFile" style="display: none;" />
+	<div class="getImg" onclick="document.getElementById('selectedFile').click();">
+		<i class="material-icons">insert_photo</i>
+	</div>
+</div>
+
+
+<div class="gauge green">
+    <p class="gauge__values">
+      <span class="gauge_rating">Good</span>
+    </p>
+    <p class="gauge_index">AQI: 0</p>
+    <svg xmlns="http://www.w3.org/2000/svg" width="241" height="241" viewBox="0 0 241 241">
+    <circle cx="120.5" cy="120.5" r="120.5" class="outer_ring"/>
+    <path d="M167.9 18.4C153.5 11.7 137.4 8 120.5 8c-19.7 0-38.3 5.1-54.4 14l15.3 24.7c11.7-6.2 25-9.7 39.1-9.7 11.3 0 22.1 2.3 32 6.3l15.4-24.9z" class="ring_orange"/>
+    <path d="M152.5 43.3c23.9 9.9 42.2 30.6 48.8 56l27.3-10.2C219.4 57.7 197 32 167.9 18.4l-15.4 24.9z" class="ring_red"/><path d="M38.1 106.9c4.2-25.9 21-48.1 43.3-60.2L66.1 22C37.7 37.7 16.8 65.4 10.2 98.2l27.9 8.7z" class="ring_yellow"/>
+    <path d="M54.4 171.6C43.5 157.5 37 139.7 37 120.5c0-4.7.4-9.2 1.1-13.7l-27.8-9C8.8 105.2 8 112.7 8 120.5c0 27.2 9.6 52.1 25.7 71.6l20.7-20.5z" class="ring_green"/>
+    <path d="M207 192.4c16.2-19.5 26-44.6 26-71.9 0-10.9-1.6-21.5-4.5-31.4l-27.3 10.2c1.8 6.8 2.7 13.9 2.7 21.2 0 19.7-6.8 37.8-18.3 52.1l21.4 19.8z" class="ring_black"/>
+    <path d="M102.3 190.1c-31.4-8.1-54.6-36.6-54.6-70.5 0-40.2 32.6-72.8 72.8-72.8s72.8 32.6 72.8 72.8c0 33.9-23.2 62.5-54.6 70.5l-18.3 17.7-18.1-17.7z" class="spinner" transform='rotate(75 120 120)' />
+    </svg>
+</div>
+
 <div class="twitter-streaming">
 <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/MrPPeople/lists/newsfeed" data-widget-id="705181877586366464" data-chrome="noscrollbar noheader nofooter noborders" width="300" height="650">
 </a> 
 </div>
+
+<div id="loading-page">
+  <div id="phrase_box">
+  <svg width="100%" height="100%">
+    <defs>
+      <mask id="mask" maskUnits="userSpaceOnUse" maskContentUnits="userSpaceOnUse">
+        <linearGradient id="linearGradient" gradientUnits="objectBoundingBox" x2="0" y2="1">
+          <stop stop-color="white" stop-opacity="0" offset="0%"/>
+          <stop stop-color="white" stop-opacity="1" offset="30%"/>
+          <stop stop-color="white" stop-opacity="1" offset="70%"/>
+          <stop stop-color="white" stop-opacity="0" offset="100%"/>
+        </linearGradient>
+        <rect width="100%" height="100%" fill="url(#linearGradient)"/>
+      </mask>
+    </defs>
+    <g width="100%" height="100%" style="mask: url(#mask);">
+      <g id="phrases"></g>
+    </g>
+  </svg>
+  </div>
+</div>
+
 <div class="weather-app">
 	<div class="main">
 		<p class="temperature"></p>
@@ -21,6 +80,7 @@
       <div class="windspeed"></div>
     </div>
 </div>
+
 <div class="instagram-favorite">
 	<blockquote class="instagram-media" 
 		data-instgrm-captioned 
@@ -57,6 +117,15 @@
 		js=d.createElement(s);
 		js.id=id;js.src=p+"://platform.twitter.com/widgets.js";
 		fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+</script>
+<script type="text/javascript">
+$(function(){
+    if ($.browser.webkit) {
+        $("iframe.webkitIframeHack").each(function(){
+            $(this).attr('src', $(this).attr('src2'));
+        });
+    };
+});
 </script>
 <script async defer src="//platform.instagram.com/en_US/embeds.js"></script>
 <%= javascript_include_tag "jquery.simpleWeather.min", "data-turbolinks-track" => true %>
