--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,6 @@
 <ul class="navbar">
 <%= link_to image_tag("logo1.svg", height: "45"), root_path, :id => "logo"%>
+<li><%= link_to "Home", root_path %></li>
 <li><%= link_to "About", about_path %></li>
 <li><a href="#" id="utilities">Utilities</a></li>
 <li><%= link_to "Map", map_path %></li>
